src/sass/layout/_page-header.scss
.page-header {
  position: absolute;
  width: 100%;
}

.nav-container {
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.logo-main-container {
  display: flex;
  align-items: center;
  padding: 0;
  margin: 0;
}

.logo,
.logo-dark {
  display: block;
  padding-top: 30px;
}

.logo-dark {
  z-index: 100;

  @media screen and (min-width: 1344px) {
    display: none;
  }
}

.logo-text {
  display: block;
  font-weight: 800;
  font-size: 16px;
  line-height: 1.23;
  letter-spacing: 0.04em;

  color: var(--title-text-color);

  &.dark-theme {
    color: var(--primary-white-color);
  }
}

.logo-description {
  display: block;
  padding: 0;
  margin: 0;
  font-weight: 700;
  font-size: 6px;
  line-height: 1.25;
  letter-spacing: 0.06em;
  text-transform: uppercase;

  color: var(--title-text-color);

  &.dark-theme {
    color: var(--primary-white-color);
  }
}

.logo-icon {
  width: 14px;
  height: 19px;
  margin-left: 4px;
  margin-right: 4px;
  margin-bottom: 4px;
}

.menu-btn {
  display: block;
  width: 20px;
  height: 12px;
  margin: 0;
  padding: 0;
  padding-top: 10px;
  border: none;
  z-index: 100;
  background-color: transparent;
  cursor: pointer;

  & .menu-close-icon {
    display: none;
  }

  &.is-open .menu-close-icon {
    display: block;
  }

  &.is-open .menu-icon {
    display: none;
  }

  @media screen and (min-width: 1344px) {
    display: none;
  }
}

.nav-link {
  display: inline-block;
  padding: 0;
  margin: 0;
  font-weight: 800;
  line-height: 1.8;
  letter-spacing: 0.03em;
  color: var(--primary-white-color);

  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);

  &:hover,
  &:focus {
    color: var(--accent-color);
    scroll-behavior: smooth;
  }
}

.nav-list {
  display: block;
  margin-top: 50px;
  margin-bottom: 50px;
}

.nav-btn {
  display: block;
  padding: 14px 14px;
  border: 2px solid var(--accent-color);
  background-color: transparent;
  font-weight: 700;
  font-size: 12px;
  line-height: 1.25;
  text-align: center;
  letter-spacing: 0.08em;
  text-transform: uppercase;
  cursor: pointer;

  color: var(--accent-color);

  &.header-btn {
    display: none;
  }
}

@media screen and (max-width: 767px) {
  .nav-btn {
    margin: 0 auto;
  }
}

@media screen and (max-width: 1343px) {
  .menu {
    display: none;
    position: fixed;
    top: 0;
    left: 0;
    padding-left: 20px;
    padding-right: 20px;
    overflow-y: scroll;
    width: 100vw;
    height: 100vh;
    z-index: 99;
    background: rgba(17, 21, 24, 0.9);

    &.is-open {
      display: block;
    }
  }
}

@media screen and (min-width: 768px) and (max-width: 1343px) {
  .logo,
  .logo-dark {
    padding-top: 40px;
  }

  .nav-btn {
    display: none;
  }

  .nav-btn.header-btn {
    display: block;
    margin-top: 40px;
    margin-left: 235px;
    margin-right: 40px;
  }

  .menu {
    padding-left: 40px;
    padding-right: 40px;
  }

  .nav-link {
    font-size: 26px;
  }

  .nav-list {
    display: block;
    margin: 0 178px;
    margin-top: 72px;
  }
}

@media screen and (min-width: 768px) {
  .logo-text {
    font-size: 26px;
  }

  .logo-description {
    font-size: 8px;
    letter-spacing: 0.18em;
    text-transform: uppercase;
  }

  .logo-accent {
    padding-right: 6px;
    color: var(--accent-color);
  }

  .logo-icon {
    width: 22px;
    height: 30px;
    margin-bottom: 5px;
  }
}

@media screen and (min-width: 1344px) {
  .page-header.container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding-top: 33px;
  }

  .menu {
    padding: 0;
    display: flex;
    align-items: center;
  }

  .nav-list {
    display: flex;
    margin: 0;
  }

  .logo {
    padding: 0;
    // padding-top: 45px;
  }

  .nav-btn {
    padding: 25px 23px;
    font-size: 14px;
    line-height: 1.214;
    letter-spacing: 0.14em;
  }

  .nav-link {
    padding: 28px 0;
    margin: 0;
    font-weight: 700;
    font-size: 14px;
    line-height: 1.214;
    text-transform: uppercase;
    color: var(--secondary-text-color);
  }

  .nav-item {
    padding-right: 40px;

    &:last-child {
      padding-right: 60px;
    }
  }
}

